--- a/all_posts.html
+++ b/all_posts.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <head>
     <title>liyp - Github个人博客</title>
-    <p><a href="https://liyp0036.github.io/index.html">我的博客主页</a> </p>
+<p><a href="https://liyp0036.github.io/index.html">我的博客主页</a> > <a href="https://liyp0036.github.io/all_posts.html">插件：文章列表</a></p>
 </head>
 <style>
     .right-text {
@@ -13,11 +13,9 @@
     }
 </style>
 <body>
-    <h1> 欢迎来到liyp的个人博客 </h1>
+    <h1> 文章列表 </h1>
     <a href="index.en.html">Switch language to English</a>
-    <h2> 最新文章 </h2>
-    <h3><a href="posts/2024040601.html">2024-04-06 16:02  我的博客创建了！</a></h3>
-    <h3><a href="all_posts.html">更多文章</a></h3>
+    <font size="4"><a href="posts/2024040601.html">2024-04-06 16:02  我的博客创建了！</a></h3>
     <div><h2>The END</h2></div>
     <div class="right-text"><h2><a href="https://liyp0036.github.io/index.html">返回主页</a>    <a href="https://liyp0036.github.io/findme.html">找到我</a></h2></div>
 </body>
