--- a/all_posts.html
+++ b/all_posts.html
@@ -14,8 +14,12 @@
 </style>
 <body>
     <h1> 文章列表 </h1>
-    <a href="index.en.html">Switch language to English</a>
-    <font size="4"><a href="posts/2024040601.html">2024-04-06 16:02  我的博客创建了！</a></h3>
-    <div><h2>The END</h2></div>
+    <p><a href="all_posts.en.html">Switch language to English</a>
+    <font size="4"></p>
+    <h2>文章</h2>
+    <h3><a href="posts/2024040601.html">2024-04-06 16:02  我的博客创建了！</a>
+      </h3>
+    </h3>
+<div><h2>The END</h2></div>
     <div class="right-text"><h2><a href="https://liyp0036.github.io/index.html">返回主页</a>    <a href="https://liyp0036.github.io/findme.html">找到我</a></h2></div>
 </body>
