--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 <DOCTYPE html>
 <meta charset="UTF-8">
+<script type="text/javascript">
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+</script>
 <head>
     <title>liyp - Github个人博客</title>
     <p><a href="https://liyp0036.github.io/index.html">我的博客主页</a> </p>
@@ -12,10 +35,11 @@
      text-align: center
     }
 </style>
-<body>
+<body onLoad="MM_preloadImages('982056.png')">
     <h1> 欢迎来到liyp的个人博客 </h1>
+    <p><a href="https://liyp.mysxl.cn/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('上线了','','982056.png',1)"><img src="982056.png" alt="上线了 博客" width="180" height="183" id="上线了"></a></p>
     <a href="index.en.html">Switch language to English</a>
-    <h2> 最新文章 </h2>
+<h2> 最新文章 </h2>
     <h3><a href="posts/2024040601.html">2024-04-06 16:02  我的博客创建了！</a></h3>
     <h3><a href="all_posts.html">更多文章</a></h3>
     <div><h2>The END</h2></div>
