--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ function MM_swapImage() { //v3.0
 </style>
 <body onLoad="MM_preloadImages('982056.png')">
     <h1> 欢迎来到liyp的个人博客 </h1>
+    <h1>VL Studio</h1>
+    <a href="varapps/ac1024.html">AC1024销售平台 - VL China</a>
+    <h1>博客内容</h1>
     <p><a href="https://liyp.mysxl.cn/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('上线了','','982056.png',1)"><img src="982056.png" alt="上线了 博客" width="180" height="183" id="上线了"></a></p>
     <a href="index.en.html">Switch language to English</a>
 <h2> 最新文章 </h2>
